add my new project to  portfolio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
           <a href="https://www.linkedin.com/in/ravindu-eshan/" target="_blank"
             ><i class="fa fa-linkedin-square" aria-hidden="true"></i
           ></a>
-          <a href="https://www.youtube.com/@codebook12?si=zSWrL6EntQjfrNyD" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+          <a
+            href="https://www.youtube.com/@codebook12?si=zSWrL6EntQjfrNyD"
+            target="_blank"
+            ><i class="fa fa-youtube-play" aria-hidden="true"></i
+          ></a>
           <a href="#"
             ><i class="fa fa-facebook-official" aria-hidden="true"></i
           ></a>
@@ -93,19 +97,34 @@
           <i class="fa fa-file-code-o" aria-hidden="true"></i>
           <h3>Programming Languages</h3>
           <p>HTML, CSS, JavaScript, PHP, Python, Java.</p>
-          <a href="https://codeinstitute.net/global/blog/what-is-a-programming-language/#:~:text=A%20programming%20language%20is%20a,a%20definite%20programming%20language%20syntax." class="btn" target="_blank">Read More</a>
+          <a
+            href="https://codeinstitute.net/global/blog/what-is-a-programming-language/#:~:text=A%20programming%20language%20is%20a,a%20definite%20programming%20language%20syntax."
+            class="btn"
+            target="_blank"
+            >Read More</a
+          >
         </div>
         <div class="services-box">
           <i class="fa fa-file-code-o" aria-hidden="true"></i>
           <h3>Framework</h3>
           <p>Bootstrap,React.js</p>
-          <a href="https://www.codecademy.com/resources/blog/what-is-a-framework/" class="btn" target="_blank">Read More</a>
+          <a
+            href="https://www.codecademy.com/resources/blog/what-is-a-framework/"
+            class="btn"
+            target="_blank"
+            >Read More</a
+          >
         </div>
         <div class="services-box">
           <i class="fa fa-file-code-o" aria-hidden="true"></i>
           <h3>Databases</h3>
           <p>MongoDB,MySQL Workbench,MySQL,PHPMyAdmin</p>
-          <a href="https://aws.amazon.com/what-is/database/#:~:text=A%20database%20is%20an%20electronically,%2C%20retrieve%2C%20and%20edit%20data." target="_blank" class="btn">Read More</a>
+          <a
+            href="https://aws.amazon.com/what-is/database/#:~:text=A%20database%20is%20an%20electronically,%2C%20retrieve%2C%20and%20edit%20data."
+            target="_blank"
+            class="btn"
+            >Read More</a
+          >
         </div>
 
         <div class="services-box">
@@ -116,20 +135,45 @@
             validation. With Git, I effectively manage version control . and
             contribute to open-source
           </p>
-          <a href="https://dev.to/postman/postman-terms-vs-github-terms-37n2#:~:text=In%20Postman%2C%20you%20can%20tag,or%20across%20all%20of%20GitHub." target="_blank"class="btn">Read More</a>
+          <a
+            href="https://dev.to/postman/postman-terms-vs-github-terms-37n2#:~:text=In%20Postman%2C%20you%20can%20tag,or%20across%20all%20of%20GitHub."
+            target="_blank"
+            class="btn"
+            >Read More</a
+          >
         </div>
       </div>
     </section>
 
     <section class="portfolio" id="portfolio">
       <h2 class="heading">Latest <span>Project</span></h2>
+
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <a href="https://github.com/EshanUGR/BloodDonation.git" target="_blank">
-
-<img src="images/bloodDonation.jpg" alt="Blood Donation System" />
+          <a href="https://maps.app.goo.gl/n6czRDs5Lzjg3G2Q7" target="_blank">
+            <img src="images/safety.jpg" alt="Safety Item Selling" />
           </a>
-          
+
+          <div class="portfolio-layer">
+            <h4>Safety Item Selling Website</h4>
+            <p>
+              I developed a fully responsive e-commerce website for selling
+              safety items using HTML, JavaScript, PHP, and CSS. The site is
+              optimized for all devices, ensuring a seamless shopping
+              experience. MySQL Workbench was used to manage the database,
+              enabling efficient product management This project highlights my
+              skills in creating functional, user-friendly web
+              applications.17/08/24
+            </p>
+            <i class="fa fa-external-link" aria-hidden="true"></i>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <a href="#" target="_blank">
+            <img src="images/bloodDonation.jpg" alt="Blood Donation System" />
+          </a>
+
           <div class="portfolio-layer">
             <h4>Blood Donation System</h4>
             <p>
@@ -140,10 +184,8 @@
             </p>
             <i class="fa fa-external-link" aria-hidden="true"></i>
           </div>
-
         </div>
 
-        
         <div class="portfolio-box">
           <img src="images/transport.jpg" alt="Transport System" />
           <div class="portfolio-layer">
@@ -263,15 +305,20 @@
         <div class="footer-section social">
           <h3>Follow Me</h3>
           <div style="display: flex; gap: 40px">
-            <a href="#"
-             target="_blank"  ><i class="fa fa-facebook" style="font-size: x-large"></i
+            <a href="#" target="_blank"
+              ><i class="fa fa-facebook" style="font-size: x-large"></i
             ></a>
-            <a href="#"
-              target="_blank" ><i class="fa fa-twitter" style="font-size: x-large"></i
+            <a href="#" target="_blank"
+              ><i class="fa fa-twitter" style="font-size: x-large"></i
             ></a>
-            <a href="https://www.youtube.com/@codebook12?si=zSWrL6EntQjfrNyD" style="font-size: x-large" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-            <a href="https://www.linkedin.com/in/ravindu-eshan/"
-               target="_blank"><i class="fa fa-linkedin" style="font-size: x-large"></i
+            <a
+              href="https://www.youtube.com/@codebook12?si=zSWrL6EntQjfrNyD"
+              style="font-size: x-large"
+              target="_blank"
+              ><i class="fa fa-youtube-play" aria-hidden="true"></i
+            ></a>
+            <a href="https://www.linkedin.com/in/ravindu-eshan/" target="_blank"
+              ><i class="fa fa-linkedin" style="font-size: x-large"></i
             ></a>
           </div>
         </div>
