--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <a href="https://maps.app.goo.gl/n6czRDs5Lzjg3G2Q7" target="_blank">
+          <a href="https://akilasuppliers.netlify.app/" target="_blank">
             <img src="images/safety.jpg" alt="Safety Item Selling" />
           </a>
 
