--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
       </div>
-      <div id="menu-icon" class="fas fa-bars"></div>
+      <div id="menu-icon" class="fa fa-bars"> </div>
     </header>
 
     <section class="home" id="home">
