correct the cv nam

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             ><i class="fa fa-facebook-official" aria-hidden="true"></i
           ></a>
         </div>
-        <a href="images/Ravindu_Eshan_CV (2).pdf" class="btn">Download My CV</a>
+        <a href="images/Ravindu_Eshan_CV.pdf" class="btn">Download My CV</a>
       </div>
       <div class="home-img">
         <img
