--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <h1><a href="#">Portfolio</a></h1>
+      <h1><a href="#">Portfolio-Ravindu Eshan</a></h1>
       <div class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -36,7 +36,7 @@
         <h3>And I'm a <span class="multiple-text">Web Developer</span></h3>
         <p>
           "I am currently seeking opportunities to apply my skills and gain
-          valuable experience as a software engineering intern. I am eager to
+          valuable experience as a <strong style="color: red;">software engineering intern</strong>. I am eager to
           contribute to innovative projects and further develop my abilities in
           software development."
         </p>
@@ -72,17 +72,17 @@
         <img
           src="images/my.jpg"
           alt="about"
-          style="width: 350px; height: 350px"
+          style="width: 350px; height: auto"
         />
       </div>
       <div class="about-content">
         <h2>About <span>Me</span></h2>
-        <h3>Web Developer</h3>
+        <h3>Responsive Web Developer</h3>
         <p>
-          "I am a Software Engineering undergraduate with a strong passion for
-          learning new technologies and collaborating on innovative projects. My
+          "I am a Information Technology undergraduate with a strong passion for<strong style="color:red"> learning new technologies and collaborating on innovative projects</strong>
+         . My
           enthusiasm for technology drives me to continually expand my skill set
-          and stay updated with the latest industry trends. I thrive in team
+          and stay <strong style="color:red">updated with the latest industry trends</strong> . I thrive in team
           environments and enjoy working with others to bring creative solutions
           to life."
         </p>
@@ -144,6 +144,9 @@
         </div>
       </div>
     </section>
+
+
+    
 
     <section class="portfolio" id="portfolio">
       <h2 class="heading">Latest <span>Project</span></h2>
