add new projects

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
       </div>
-      <div id="menu-icon" class="fa fa-bars"> </div>
+      <div id="menu-icon" class="fa fa-bars"></div>
     </header>
 
     <section class="home" id="home">
@@ -36,9 +36,10 @@
         <h3>And I'm a <span class="multiple-text">Web Developer</span></h3>
         <p>
           "I am currently seeking opportunities to apply my skills and gain
-          valuable experience as a <strong style="color: red;">software engineering intern</strong>. I am eager to
-          contribute to innovative projects and further develop my abilities in
-          software development."
+          valuable experience as a
+          <strong style="color: red">software engineering intern</strong>. I am
+          eager to contribute to innovative projects and further develop my
+          abilities in software development."
         </p>
         <div class="social-media">
           <a href="https://github.com/EshanUGR" target="_blank"
@@ -79,12 +80,18 @@
         <h2>About <span>Me</span></h2>
         <h3>Responsive Web Developer</h3>
         <p>
-          "I am a Information Technology undergraduate with a strong passion for<strong style="color:red"> learning new technologies and collaborating on innovative projects</strong>
-         . My
-          enthusiasm for technology drives me to continually expand my skill set
-          and stay <strong style="color:red">updated with the latest industry trends</strong> . I thrive in team
-          environments and enjoy working with others to bring creative solutions
-          to life."
+          "I am a Information Technology undergraduate with a strong passion
+          for<strong style="color: red">
+            learning new technologies and collaborating on innovative
+            projects</strong
+          >
+          . My enthusiasm for technology drives me to continually expand my
+          skill set and stay
+          <strong style="color: red"
+            >updated with the latest industry trends</strong
+          >
+          . I thrive in team environments and enjoy working with others to bring
+          creative solutions to life."
         </p>
         <a href="#services" class="btn">Read More</a>
       </div>
@@ -145,15 +152,12 @@
       </div>
     </section>
 
-
-    
-
     <section class="portfolio" id="portfolio">
       <h2 class="heading">Latest <span>Project</span></h2>
 
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <a href="https://akilasuppliers.netlify.app/" target="_blank">
+          <a href="akilasuppliers.com" target="_blank">
             <img src="images/safety.jpg" alt="Safety Item Selling" />
           </a>
 
@@ -217,6 +221,46 @@
             <i class="fa fa-external-link" aria-hidden="true"></i>
           </div>
         </div>
+
+
+        <div class="portfolio-box">
+          <img src="images/youtube-ui.png" alt="Youtube UI Design" />
+          <div class="portfolio-layer">
+            <h4>YOUTUBE UI DESIGN</h4>
+            <p>
+              Developed a YouTube interface using HTML and CSS, incorporating
+              containers such as divs, links, img tags, and various other
+              elements. The design features a sidebar, navigation bar, and
+              icons, utilizing flexbox, color and font styling, and positioning
+              techniques for a precise and functional layout. Built using VS
+              Code.Code is my GitHub
+            </p>
+            <i class="fa fa-external-link" aria-hidden="true"></i>
+          </div>
+        </div>
+
+
+
+
+
+
+         <div class="portfolio-box">
+          <img src="images/resturant.png" alt="Youtube UI Design" />
+          <div class="portfolio-layer">
+            <h4> RESTURANT WEBSITE</h4>
+            <p>
+              Developed a vibrant and responsive restaurant application using React
+ and CSS. The app features a colorful design with rich media content,
+ including vibrant food images, a beautifully crafted menu page, and
+ small video clips showcasing the restaurant ambiance. Enhanced the
+ user experience with a stylish font design. Optimized for mobile devices,
+ tablets, and larger screens, the application was built and tested using
+ Visual Studio Code. The project is available on GitHub for review
+            </p>
+            <i class="fa fa-external-link" aria-hidden="true"></i>
+          </div>
+        </div>
+
       </div>
     </section>
 
