--- a/index.html
+++ b/index.html
@@ -336,10 +336,9 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#portfolio">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#privacy-policy">Privacy Policy</a></li>
-            <li><a href="#terms-of-service">Terms of Service</a></li>
+         
           </ul>
         </div>
         <!-- Contact Information -->
