Update my portoflio new cv and new gpa

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#portfolio">Projects</a>
+        <a href="#education">Education</a>
         <a href="#contact">Contact</a>
       </div>
       <div id="menu-icon" class="fa fa-bars"></div>
@@ -57,7 +58,7 @@
             ><i class="fa fa-facebook-official" aria-hidden="true"></i
           ></a>
         </div>
-        <a href="images/Ravindue_Eshan_CV.pdf" class="btn">Download My CV</a>
+        <a href="images/Ravindu-Eshan-Update-CV.pdf" class="btn">Download My CV</a>
       </div>
       <div class="home-img">
         <img
@@ -113,8 +114,8 @@
         </div>
         <div class="services-box">
           <i class="fa fa-file-code-o" aria-hidden="true"></i>
-          <h3>Framework</h3>
-          <p>Bootstrap,React.js</p>
+          <h3>Framework/Libarary</h3>
+          <p>Bootstrap,React.js(Library javascript),Express,Nodejs(JRE)</p>
           <a
             href="https://www.codecademy.com/resources/blog/what-is-a-framework/"
             class="btn"
@@ -222,7 +223,6 @@
           </div>
         </div>
 
-
         <div class="portfolio-box">
           <img src="images/youtube-ui.png" alt="Youtube UI Design" />
           <div class="portfolio-layer">
@@ -239,30 +239,64 @@
           </div>
         </div>
 
-
-
-
-
-
-         <div class="portfolio-box">
+        <div class="portfolio-box">
           <img src="images/resturant.png" alt="Youtube UI Design" />
           <div class="portfolio-layer">
-            <h4> RESTURANT WEBSITE</h4>
+            <h4>RESTURANT WEBSITE</h4>
             <p>
-              Developed a vibrant and responsive restaurant application using React
- and CSS. The app features a colorful design with rich media content,
- including vibrant food images, a beautifully crafted menu page, and
- small video clips showcasing the restaurant ambiance. Enhanced the
- user experience with a stylish font design. Optimized for mobile devices,
- tablets, and larger screens, the application was built and tested using
- Visual Studio Code. The project is available on GitHub for review
+              Developed a vibrant and responsive restaurant application using
+              React and CSS. The app features a colorful design with rich media
+              content, including vibrant food images, a beautifully crafted menu
+              page, and small video clips showcasing the restaurant ambiance.
+              Enhanced the user experience with a stylish font design. Optimized
+              for mobile devices, tablets, and larger screens, the application
+              was built and tested using Visual Studio Code. The project is
+              available on GitHub for review
             </p>
             <i class="fa fa-external-link" aria-hidden="true"></i>
           </div>
         </div>
 
+        <div class="portfolio-box">
+          <img src="images/school-manageme-mern.jpeg" alt="Youtube UI Design" />
+          <div class="portfolio-layer">
+            <h4>School Management System</h4>
+            <p>
+              I have developed a School Management System with three user roles:
+              Admin, Teacher, and Student. The system features user-specific
+              dashboards, interactive bar graphs, and dynamic forms. Teachers
+              can easily manage tasks such as adding assignments, marking
+              attendance, and publishing notices. Admins can monitor performance
+              and efficiently handle system activities. The platform is designed
+              to simplify operations and provide a seamless experience for all
+              users
+            </p>
+            <i class="fa fa-external-link" aria-hidden="true"></i>
+          </div>
+        </div>
       </div>
     </section>
+
+   <section class="education-section" id="education">
+  <h2 class="heading">My <span>Education</span></h2>
+  <div class="education-content">
+    <div class="education-card">
+      <h3>Advanced Level Education</h3>
+      <p><strong>Stream:</strong> Science</p>
+      <p><strong>Subjects:</strong> Physics, Chemistry, Mathematics</p>
+      <p><strong>Year:</strong> 2019</p>
+      <p><strong>Achievements:</strong> Distinction in Mathematics</p>
+    </div>
+    <div class="education-card">
+      <h3>Bachelor’s Degree Program</h3>
+      <p><strong>Program:</strong> Software Engineering</p>
+      <p><strong>Institute:</strong> Sri Lanka Institute of Information Technology</p>
+      <p><strong>Current Year:</strong> Third Year</p>
+      <p><strong>GPA:</strong> 2.59</p>
+    </div>
+  </div>
+</section>
+
 
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
@@ -326,7 +360,8 @@
           <p>
             Hi, I'm Ravindu Eshan, a passionate Web Developer specializing in
             creating dynamic and beautiful web pages. My goal is to make the web
-            a better place one site at a time.
+            a better place one site at a time.<stron style="color:red;
+            text-decoration: underline;">Looking for Software Engineering Internship</stron>
           </p>
         </div>
         <!-- Navigation Links -->
@@ -337,8 +372,8 @@
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Projects</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#contact">Contact</a></li>
-         
           </ul>
         </div>
         <!-- Contact Information -->
