change the file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#portfolio">Projects</a>
-        <a href="#education">Education</a>
+        <!-- <a href="#education">Education</a> -->
         <a href="#contact">Contact</a>
       </div>
       <div id="menu-icon" class="fa fa-bars"></div>
@@ -276,7 +276,7 @@
         </div>
       </div>
     </section>
-
+<!-- 
    <section class="education-section" id="education">
   <h2 class="heading">My <span>Education</span></h2>
   <div class="education-content">
@@ -296,7 +296,7 @@
     </div>
   </div>
 </section>
-
+ -->
 
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
@@ -372,7 +372,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Projects</a></li>
-            <li><a href="#education">Education</a></li>
+            <!-- <li><a href="#education">Education</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
