--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>
           "I am currently seeking opportunities to apply my skills and gain
           valuable experience as a
-          <strong style="color: red">software engineering intern</strong>. I am
+          <strong style="color: green">software engineering intern</strong>. I am
           eager to contribute to innovative projects and further develop my
           abilities in software development."
         </p>
@@ -82,13 +82,13 @@
         <h3>Responsive Web Developer</h3>
         <p>
           "I am a Information Technology undergraduate with a strong passion
-          for<strong style="color: red">
+          for<strong style="color: green">
             learning new technologies and collaborating on innovative
             projects</strong
           >
           . My enthusiasm for technology drives me to continually expand my
           skill set and stay
-          <strong style="color: red"
+          <strong style="color: green"
             >updated with the latest industry trends</strong
           >
           . I thrive in team environments and enjoy working with others to bring
@@ -360,7 +360,7 @@
           <p>
             Hi, I'm Ravindu Eshan, a passionate Web Developer specializing in
             creating dynamic and beautiful web pages. My goal is to make the web
-            a better place one site at a time.<stron style="color:red;
+            a better place one site at a time.<stron style="color:green;
             text-decoration: underline;">Looking for Software Engineering Internship</stron>
           </p>
         </div>
